Upgrade to rxjs 6
Created provider for elite schedule.
- Make get call to retrieve tournaments and process result async.

--- a/src/pages/tournaments/tournaments.html
+++ b/src/pages/tournaments/tournaments.html
@@ -9,11 +9,8 @@
 
 <ion-content>
     <ion-list>
-      <button ion-item (click)="itemTapped()">
-        March Madness Tournament
-      </button>
-      <button ion-item (click)="itemTapped()">
-        Summer Showdown
+      <button *ngFor="let tourney of tournaments" ion-item (click)="itemTapped($event, tourney)">
+          {{tourney.name}}
       </button>
     </ion-list>
 </ion-content>
