Style the Find tournaments button

--- a/src/pages/my-teams/my-teams.html
+++ b/src/pages/my-teams/my-teams.html
@@ -22,6 +22,9 @@
             <p>{{item.tournamentName}}</p>
         </button>
     </ion-list>
-    <button ion-button full (click)="goToTournaments()">Find a Tournament</button>
+    <button ion-button icon-left full round (click)="goToTournaments()">
+        <ion-icon name="search"></ion-icon>
+        Find a Tournament 
+    </button>
 
 </ion-content>
